# astral-aggregator

./: .cursorignore  .dockerignore  .gitignore  Dockerfile  Dockerfile.backup  README.md  RESET_MARKER.txt  TROUBLESHOOTING.md  fly.toml  healthcheck.py  healthcheck.sh  pyproject.toml  railway.toml  render.yaml  render.yaml.backup  requirements.txt  run_tests.py  start.py  start.sh  start_direct.py  start_railway.py  start_railway.sh  start_simple.py  start_uvicorn.py  test_port.py
.cursor/rules/: py.mdc
app/: dependencies.py  main.py
app/crawler/: base_detector.py  change_detector.py  content_detector.py  firecrawl_detector.py  hybrid_detector.py  sitemap_detector.py
app/routers/: dashboard.py  listeners.py  simplified_trigger.py
app/utils/: baseline_manager.py  baseline_merger.py  config.py  json_writer.py  proxy_manager.py  simplified_change_detector.py  tor_service.py
config/: proxy_config.yaml  proxy_config.yaml.example  sites.yaml.example  sites_example.yaml  sites_railway.yaml  sites_railway.yaml.example
deliverables/: waverly_0804_0930
docs/: BASELINE_EVOLUTION_IMPLEMENTATION.md  DEPLOYMENT_TROUBLESHOOTING.md  PORT_ISSUE_FIX.md  RAILWAY_PORT_SOLUTION.md  RAILWAY_STARTUP_FIX.md  README.md  SETUP.md  SIMPLIFIED_CHANGE_DETECTION_IMPLEMENTATION.md  TROUBLESHOOTING.md  deploy.md  performance_report.md  plan.md
scripts/: README.md  README_EXPORT.md  analyze_article_dates.py  analyze_changes.py  automated_monitor.py  check_sitemap_content_overlap.py  comprehensive_content_check.py  create_comprehensive_baseline.py  daily_baseline_system.py  debug_sitemap.py  demonstrate_baseline_evolution.py  deploy_debug.py  diagnose.py  enhanced_change_detector.py  export_changes_cli.py  export_changes_to_excel.py  fix_baseline.py  force_content_check.py  healthcheck.py  healthcheck.sh  improved_content_detector.py  investigate_content_hashes.py  manage_baselines.py  optimize_cursor.ps1  railway_healthcheck.py  railway_start.py  reset_dashboard.py  run_baseline_evolution_tests.py  setup_proxy_env.ps1  show_changes.py  simple_healthcheck.py  simple_proxy_test.py  start.py  start_railway.py  switch_proxy.py  test_adaptive_rate_limiting.py  test_analytics.py  test_automated_monitor_sitemap.py  test_baseline_evolution.py  test_baseline_evolution_demo.py  (+24 more)
scripts/config/: sites.yaml
temp_files/: check_baseline_structure.py  cleanup_root.py  comprehensive_baseline_verification.py  establish_tomorrow_baseline.py  show_today_status.py  test_baseline_manual.py  test_baselines.py  verify_baselines.py
tests/: BASELINE_EVOLUTION_TESTING.md  README.md  __init__.py  conftest.py  test_basic.py  test_change_detection.py  test_healthcheck.py
tests/api/: test_baseline_evolution_api.py  test_dashboard.py  test_listeners.py  test_main_endpoints.py
tests/integration/: test_baseline_evolution_integration.py  (+2 more)
(+7 files in other folders)
