[project]
name = "aggregator"
version = "0.1.0"
description = "News aggregation service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.35.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]
